// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly 1`] = `
<img
  className=""
  onClick={[Function]}
  src="http://swagchat.io/logo.png"
  style={Object {}}
/>
`;

exports[`Avatar renders correctly 2`] = `
<img
  className="test-class"
  onClick={[Function]}
  src="http://swagchat.io/logo.png"
  style={
    Object {
      "width": "100px",
    }
  }
/>
`;
